--- a/.github/workflows/s3web.yaml
+++ b/.github/workflows/s3web.yaml
@@ -26,7 +26,7 @@ jobs:
         with:
           aws-region: ${{ secrets.AWS_REGION }}
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
-          role-session-name: GitHubActions
+          role-session-name: GitHubActDions
 
       - name: Deploy to S3
         run: |
